--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">TBD</a></h3>
-										<p>TBD</p>
+										<h3><a href="landing.html" class="link">Blog Post 1</a></h3>
+										<p>How to travel when you're young and broke</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +74,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">TBD</a></h3>
-										<p>TBD</p>
+										<h3><a href="landing.html" class="link">Blog Post 2</a></h3>
+										<p>5 life-changing lessons you learn when you travel</p>
 									</header>
 								</article>
 								<article>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">TBD</a></h3>
+										<h3><a href="landing.html" class="link">Blog Post 3</a></h3>
 										<p>TBD</p>
 									</header>
 								</article>
@@ -92,8 +92,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Podcast</a></h3>
+										<p>Insert title here</p>
 									</header>
 								</article>
 								<article>
@@ -101,8 +101,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Video</a></h3>
+										<p>Insert title here</p>
 									</header>
 								</article>
 								<article>
@@ -168,15 +168,15 @@
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>571-606-9361</span>
+										<span></span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1720 Tomworth Ct.<br />
-										Leesburg, VA 20176<br />
+										<span><br />
+										<br />
 										United States of America</span>
 									</div>
 								</section>
