--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Abby Whittleton Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+						<a href="index.html" class="logo"><strong>Abby Whittleton</strong> <span>Website</span></a>
 					</header>
 
 				<!-- Menu -->
@@ -44,6 +41,9 @@
 						<div class="inner">
 							<header class="major">
 								<h1>Hi, my name is Abby Whittleton</h1>
+								<span class="image">
+									<img src="https://images.freeimages.com/images/large-previews/00c/portofino-italy-1217385.jpg" alt="" />
+								</span>
 							</header>
 							<div class="content">
 								<p>Student at Virginia Tech<br />
@@ -62,56 +62,56 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="https://cdn-images-1.medium.com/max/1600/0*1MkL-5WOnXXYekdV" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Blog Post 1</a></h3>
+										<h3><a href="https://medium.com/@abbywhittleton/how-to-travel-when-youre-young-and-broke-e1227e5247bb" class="link">Blog Post 1</a></h3>
 										<p>How to travel when you're young and broke</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="https://cdn-images-1.medium.com/max/1600/0*v225e1IKVaeTN92d" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Blog Post 2</a></h3>
+										<h3><a href="https://medium.com/@abbywhittleton/5-life-changing-lessons-you-learn-when-you-travel-9c82b001e9b1" class="link">Blog Post 2</a></h3>
 										<p>5 life-changing lessons you learn when you travel</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="https://cdn-images-1.medium.com/max/1600/0*JOsdrc8Yebx815ay" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Blog Post 3</a></h3>
-										<p>TBD</p>
+										<h3><a href="https://medium.com/@abbywhittleton/how-to-find-yourself-by-getting-lost-b62a90b94eae" class="link">Blog Post 3</a></h3>
+										<p>How to find yourself by getting lost</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="https://images.freeimages.com/images/large-previews/28a/a-short-street-in-cracow-1527010.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Podcast</a></h3>
-										<p>Insert title here</p>
+										<h3><a href="https://soundcloud.com/wiki0831/tips-for-traveling-in-europe" class="link">Podcast</a></h3>
+										<p>Traveling Tips for Young People</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="https://images.freeimages.com/images/large-previews/118/the-blue-mosque-1376077.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Video</a></h3>
-										<p>Insert title here</p>
+										<h3><a href="https://www.youtube.com/watch?v=msqhGrmRNv0" class="link">Video</a></h3>
+										<p>Economic Impacts of Local Tourism</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="https://images.freeimages.com/images/large-previews/820/mountain-view-1403918.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="https://www.lonelyplanet.com/" class="link">Additional Travel Resource</a></h3>
+										<p>Lonely Planet</p>
 									</header>
 								</article>
 							</section>
@@ -122,80 +122,20 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>I'm a senior at Virginia Tech. My love for traveling inspired the topic I chose for my blogs, podcast, and video.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
+									<p>I created this website as part of my Writing and Digital Media class. My love for traveling inspired the topic I chose for my blogs, podcast, and video. If you're interested in learning more about different aspects of traveling, read my blog posts, listen to the podcast, or watch the video.</p>
 								</div>
 							</section>
 
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">abbyw9@vt.edu</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span></span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span><br />
-										<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
+
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Abby Whittleton</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
